# SPDX-FileCopyrightText: OpenTalk GmbH <mail@opentalk.eu>
#
# SPDX-License-Identifier: EUPL-1.2

[package]
name = "ics-chrono-tz"
version = "0.1.0"
edition = "2021"
publish = true
build = "build.rs"
description = "Convert chrono-tz Tz to ics::TimeZone"
license = "EUPL-1.2"
documentation = "https://docs.rs/ics-chrono-tz"
keywords = ["ics", "timezone", "chrono"]

[dependencies]
ics = "0.5"
chrono-tz = "=0.8.6"

[build-dependencies]
parse-zoneinfo = "0.3"
chrono = "0.4"
