# SPDX-FileCopyrightText: OpenTalk GmbH <mail@opentalk.eu>
#
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "ics-chrono-tz"
version = "0.0.0-dev"
edition = "2021"
publish = true
build = "build.rs"
description = "Convert chrono-tz Tz to ics::TimeZone"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/ics-chrono-tz"
keywords = ["ics", "timezone", "chrono"]

[dependencies]
ics = "0.5"
chrono-tz = "=0.10.0"

[build-dependencies]
parse-zoneinfo = "0.3"
chrono = "0.4"

[package.metadata.cargo-machete]
ignored = ["chrono", "chrono_tz", "ics", "parse_zoneinfo"]
